--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.0.5",
+    "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^4.0.0-beta.5",
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/tailwind": "^5.1.2",
+    "@libsql/client": "^0.14.0",
+    "ai": "^4.0.9",
     "astro": "^5.0.0-beta.12",
-    "@astrojs/check": "^0.9.4",
-    "typescript": "^5.7.2"
+    "cloudinary": "^2.5.1",
+    "openai": "^4.73.1",
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5.7.2",
+    "zod": "^3.23.8"
   }
 }
