--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "tailwindcss": "^3.4.15",
     "typescript": "^5.7.2",
     "zod": "^3.23.8"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
