--- a/package.json
+++ b/package.json
@@ -12,17 +12,22 @@
     "@ai-sdk/openai": "^1.0.5",
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^4.0.0-beta.5",
+    "@astrojs/react": "^4.0.0",
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.2",
     "@astrojs/vercel": "^7.8.2",
+    "@fontsource-variable/ysabeau-infant": "^5.1.0",
     "@libsql/client": "^0.14.0",
+    "@types/react": "^19.0.1",
     "ai": "^4.0.9",
     "astro": "^5.0.0-beta.12",
+    "astro-cloudinary": "^1.3.0",
     "cloudinary": "^2.5.1",
     "openai": "^4.73.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwindcss": "^3.4.15",
-    "typescript": "^5.7.2",
     "zod": "^3.23.8"
   },
   "engines": {
