--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/tailwind": "^5.1.2",
     "@astrojs/vercel": "^7.8.2",
     "@fontsource-variable/ysabeau-infant": "^5.1.0",
+    "@fontsource-variable/ysabeau-sc": "^5.1.1",
     "@libsql/client": "^0.14.0",
     "@types/react": "^19.0.1",
     "ai": "^4.0.9",
