feat: Add DownloadImageButton component for generating and downloading images

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fontsource-variable/ysabeau-sc": "^5.1.1",
     "@libsql/client": "^0.14.0",
     "@types/react": "^19.0.1",
+    "@techstark/opencv-js": "4.10.0-beta.1",
     "ai": "^4.0.9",
     "astro": "^5.0.0-beta.12",
     "astro-cloudinary": "^1.3.0",
