--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.2",
-    "@astrojs/vercel": "^7.8.2",
+    "@astrojs/vercel": "^8.0.5",
     "@fontsource-variable/ysabeau-infant": "^5.1.0",
     "@fontsource-variable/ysabeau-sc": "^5.1.1",
     "@libsql/client": "^0.14.0",
-    "@types/react": "^19.0.1",
     "@techstark/opencv-js": "4.10.0-beta.1",
+    "@types/react": "^19.0.1",
     "ai": "^4.0.9",
-    "astro": "^5.0.0-beta.12",
+    "astro": "^5.2.0",
     "astro-cloudinary": "^1.3.0",
     "cloudinary": "^2.5.1",
     "openai": "^4.73.1",
@@ -34,5 +34,8 @@
   },
   "engines": {
     "node": "18.x"
+  },
+  "devDependencies": {
+    "vite": "^6.0.11"
   }
 }
